k8s-rpi-apps-vault/09-vault-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault-server
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  serviceName: vault-internal
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: "OnDelete"
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
        component: server
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: vault
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 1000
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: vault-config
        - name: home
          emptyDir: {}     
      containers:
        - name: vault
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          image: docker.io/hashicorp/vault:latest
          imagePullPolicy: IfNotPresent
          command:
          - "vault" 
          - "server" 
          - "-config=/vault/config/vault.conf"
          volumeMounts:
            - name: home
              mountPath: /home/vault
            - name: config
              mountPath: /vault/config                
          ports:
            - containerPort: 8200
              name: http
            - containerPort: 8201
              name: https-internal
            - containerPort: 8202
              name: http-rep
